--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "expo": "~46.0.9",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
-    "react-native": "0.69.5"
+    "react-native": "0.69.5",
+    "react-native-numeric-input": "^1.9.1",
+    "react-native-radio-form": "^1.1.0",
+    "react-native-simple-radio-button": "^2.7.4",
+    "expo-font": "~10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
